tests/inc_dec/valid/increment_post.amu
s32 main(){
  s32 a = 5;
  s32 b = a++;
  return a + b;
}