tests/inc_dec/invalid/unknown_dec_post.amu
main :: () -> s32 {
  a--;
  return 0;
}